--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,35 @@ h6 {
     width: 1440px;
     height: 507px;
     background-color: #F8F8F8;
-    left: 0px;
-    top: 2219px;
+}
+
+.site-footer-top {
+    position: absolute;
+    width: 1100px;
+    height: 60px;
+    left: 170px;
+    top: 2275px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px;
+}
+
+.logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    position: absolute;
+    left: -20px;
+    top: 300px;
+}
+
+.socials {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 104px;
+    height: 24px;
 }
