--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,15 @@ h6 {
     border-top: 5px solid #ff7500;
 }
 
+.container{
+    max-width: 1400px;
+    width: 100%;
+    padding-right: 30px;
+    padding-left: 30px;
+    box-sizing: border-box;
+    margin: 0 auto;
+}
+
 .site-nav {
     width: 1100px;
     height: 59.18px;
@@ -373,8 +382,20 @@ h6 {
 .socials {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width: 104px;
     height: 24px;
+    position: absolute;
+    top: 320px;
+    left: 900px;
+}
+
+.chiziq {
+    position: absolute;
+    width: 1100px;
+    height: 2px;
+    left: 120px;
+    top: 2675px;
+    background-color: rgba(37, 36, 32, 0.5);
 }
